feat: Authentication Filter에 role 저장 추가