@@ -5,13 +5,15 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
+import kr.co.hdi.domain.user.entity.Role;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class SessionAuthenticationFilter extends OncePerRequestFilter {
@@ -25,10 +27,12 @@ public class SessionAuthenticationFilter extends OncePerRequestFilter {
 
         if (session != null) {
             Long userId = (Long) session.getAttribute("userId");
+            Role role = (Role) session.getAttribute("role");
+
             if (userId != null) {
                 // 인증된 사용자로 처리
                 UsernamePasswordAuthenticationToken auth =
-                        new UsernamePasswordAuthenticationToken(userId, null, Collections.emptyList());
+                        new UsernamePasswordAuthenticationToken(userId, null, List.of(new SimpleGrantedAuthority(role.getValue())));
                 SecurityContextHolder.getContext().setAuthentication(auth);
             }
         }
